--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
+  },
+  "dependencies": {
+    "svelte-sound": "^0.6.0"
   }
 }
