--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "@rainbow-rumble/audience-display",
   "private": true,
   "version": "0.0.0",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "server:dev": "cd packages/server && bun dev",
-    "server:build": "cd packages/server && bun build",
+    "server:build": "cd packages/server && bun run build",
     "server:start": "cd packages/server && bun start",
     "ui:dev": "cd packages/ui && bun dev",
-    "ui:build": "cd packages/ui && bun build",
+    "ui:build": "cd packages/ui && bun run build",
     "ui:start": "cd packages/ui && bun start",
     "fakefms:start": "bun fakefms:build && npm-run-all -p fakefms:dev fakefms-ui:dev",
     "fakefms:dev": "docker run -p 8080:8080 fakefms",
