--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
+    "start": "vite preview --port 5173",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "type": "module"
